<resources>
    <string name="app_name">Agri10x</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_farmer">Farmer</string>
    <string name="title_activity_quality_check">QualityCheck</string>
    <string name="title_activity_trader">Trader</string>
    <string name="network_error_message">Check Your Connection and Try Again</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="termandconditiontitle"><![CDATA[Terms & Condition Applies]]></string>
    <string name="DeviceName">Android</string>
    <string name="title_activity_unvrified">Unverified User</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_of_user">Name of User</string>
    <string name="search">Search</string>
    <string name="temperature">Temperature</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="five_days_forecast">Five Days Forecast</string>
    <string name="todo">TODO</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_upload_document">UploadDocument</string>
    <string name="prv">• The platform ensures to provide high-quality produce from trusted stakeholders at competitive prices.\n\n• Our goal is to serve the highest standards for secure transactions and customer information privacy.</string>
    <string name="headprv">Agri10x is an innovative global agriculture platform.</string>
    <string name="kyc_string">• KYC is an important term used by businesses and refers to the process of verification of the identity of the customers and clients either before or during the start of doing business with them.\n\n• In order to completed your verification process please upload copy of your Identity with A clear photo and pdf to proof the document holder.</string>
    <string name="agrprv">Agri10X envisions transforming the roots of global rural economy by integrating the entire Agri-value chain through the digital cooperative platform and becoming a one-stop farming solution.</string>
    <string name="string2">• This is agri10x application.\n\n• For more features you need be a verfied user.\n\n• To get verified you need to submit your business KYC.\n\n• For more details contact us.</string>
    <string name="titlename"><b>Agri10x</b></string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="sync_header">Auto Login</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Enable Biometric Login</string>
    <string name="title_activity_refer">Refer</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
